# Diplom

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini  report.odt  Отзыв.odt  Отчет.odt  Презентация.odp  Публикация.odt  Рецензия.odt
code/: CMakeLists.txt  bob.cpp  bob.h  constaints.h  doublependulum.cpp  doublependulum.h  main.cpp  normalization.cpp  normalization.h  trail.cpp  trail.h
imgui-sfml/: imconfig.h
